--- a/app/views/users/add-geological-form.template.html
+++ b/app/views/users/add-geological-form.template.html
@@ -89,10 +89,11 @@
 				<tr>
 					<td><label>16. Loại mẫu vật <span class="has-required">(*)</span>:</label></td>
 					<td>
-						<select required class="select-box" title="{{tooltips[16]}}" name="loaiMau" ng-model="data.loaiMau">
-							<option>Mẫu nghiên cứu</option>
-							<option>Mẫu trưng bày</option>
-							<option>Mẫu type</option>
+						<select required class="select-box" title="{{tooltips[16]}}" name="loaiMau">
+							<option value=""></option>
+							<option value="Mẫu nghiên cứu">Mẫu nghiên cứu</option>
+							<option value="Mẫu trưng bày">Mẫu trưng bày</option>
+							<option value="Mẫu type">Mẫu type</option>
 						</select>
 					</td>
 				</tr>
@@ -137,8 +138,8 @@
 						<tr>
 							<td>Quốc gia<span class="has-required">(*)</span>: </td>
 							<td>
-								<select class="select-box" ng-model="quocGia" title="{{tooltips[24]}}" name="quocGia" required>
-									<option value="VietNam">Việt Nam</option>
+								<select class="select-box" title="{{tooltips[24]}}" name="quocGia" required>
+									<option value="Việt Nam">Việt Nam</option>
 								</select>
 							</td>
 						</tr>
@@ -314,10 +315,11 @@
 				<tr>
 					<td><label>46. Loại mẫu <span class="has-required">(*)</span>:</label></td>
 					<td>
-						<select required class="select-box" title="{{tooltips[56]}}" name="loaiMauVat" ng-model="data.loaiMauVat">
-							<option>Mẫu đá </option>
-							<option>Mẫu khoáng vật</option>
-							<option>Mẫu khoáng sản</option>
+						<select required class="select-box" title="{{tooltips[56]}}" name="loaiMauVat">
+							<option value=""></option>
+							<option value="Mẫu đá">Mẫu đá </option>
+							<option value="Mẫu khoáng vật">Mẫu khoáng vật</option>
+							<option value="Mẫu khoáng sản">Mẫu khoáng sản</option>
 						</select>
 					</td>
 				</tr>
@@ -408,7 +410,8 @@
 				<tr>
 					<td><label>62. Hình thức nhập mẫu:</label></td>
 					<td>
-						<select class="select-box" title="{{tooltips[72]}}" name="hinhThucNhapMau" ng-model="data.hinhThucNhapMau">
+						<select class="select-box" title="{{tooltips[72]}}" name="hinhThucNhapMau">
+							<option value=""></option>
 							<option value="Thu thập">Thu thập</option>
 							<option value="Hiến tặng">Hiến Tặng</option>
 							<option value="Khác">Khác</option>
@@ -419,7 +422,8 @@
 				<tr>
 					<td><label>63. Trao đổi mẫu: </label></td>
 					<td>
-						<select class="select-box" title="{{tooltips[73]}}" name="traoDoiMau" ng-model="data.traoDoiMau">
+						<select class="select-box" title="{{tooltips[73]}}" name="traoDoiMau">
+							<option value=""></option>
 							<option value="Có thể">Có thể</option>
 							<option value="Không thể">Không thể</option>
 						</select>
@@ -428,7 +432,8 @@
 				<tr>
 					<td><label>64. Vay mượn mẫu:</label></td>
 					<td>
-						<select class="select-box" title="{{tooltips[74]}}" name="vayMuon" ng-model="data.vayMuon">
+						<select class="select-box" title="{{tooltips[74]}}" name="vayMuon">
+							<option value=""></option>
 							<option value="Có thể">Có thể</option>
 							<option value="Không thể">Không thể</option>
 						</select>
