--- a/app/views/users/add-vegetable-form.template.html
+++ b/app/views/users/add-vegetable-form.template.html
@@ -142,10 +142,11 @@
 				<tr>
 					<td><label>16. Loại mẫu vật <span class="has-required">(*)</span>:</label></td>
 					<td>
-						<select required title="{{tooltips[29]}}" name="loaiMau" class="select-box" ng-model="data.loaiMau">
-							<option>Mẫu nghiên cứu</option>
-							<option>Mẫu trưng bày</option>
-							<option>Mẫu type</option>
+						<select required title="{{tooltips[29]}}" name="loaiMau" class="select-box">
+							<option value=""></option>
+							<option value="Mẫu nghiên cứu">Mẫu nghiên cứu</option>
+							<option value="Mẫu trưng bày">Mẫu trưng bày</option>
+							<option value="Mẫu type">Mẫu type</option>
 						</select>
 					</td>
 				</tr>
@@ -189,8 +190,8 @@
 						<tr>
 							<td>Quốc gia<span class="has-required">(*)</span>: </td>
 							<td>
-								<select class="select-box" ng-model="quocGia" title="{{tooltips[37]}}" name="quocGia" required>
-									<option value="VietNam">Việt Nam</option>
+								<select class="select-box" title="{{tooltips[37]}}" name="quocGia" required>
+									<option value="Việt Nam">Việt Nam</option>
 								</select>
 							</td>
 						</tr>
@@ -429,7 +430,8 @@
 				<tr>
 					<td><label>57. Hình thức nhập mẫu:</label></td>
 					<td>
-						<select class="select-box" title="{{tooltips[84]}}" name="hinhThucNhapMau" ng-model="data.hinhThucNhapMau">
+						<select class="select-box" title="{{tooltips[84]}}" name="hinhThucNhapMau">
+							<option value=""></option>
 							<option value="Thu thập">Thu thập</option>
 							<option value="Hiến tặng">Hiến Tặng</option>
 							<option value="Khác">Khác</option>
@@ -440,7 +442,8 @@
 				<tr>
 					<td><label>58. Trao đổi mẫu: </label></td>
 					<td>
-						<select title="{{tooltips[85]}}" name="traoDoiMau" class="select-box" ng-model="data.traoDoiMau">
+						<select title="{{tooltips[85]}}" name="traoDoiMau" class="select-box">
+							<option value=""></option>
 							<option value="Có thể">Có thể</option>
 							<option value="Không thể">Không thể</option>
 						</select>
@@ -449,7 +452,8 @@
 				<tr>
 					<td><label>59. Vay mượn mẫu:</label></td>
 					<td>
-						<select class="select-box" title="{{tooltips[86]}}" name="vayMuon" ng-model="data.vayMuon">
+						<select class="select-box" title="{{tooltips[86]}}" name="vayMuon">
+							<option value=""></option>
 							<option value="Có thể">Có thể</option>
 							<option value="Không thể">Không thể</option>
 						</select>
