--- a/app/views/users/edit/edit-geological-form.template.html
+++ b/app/views/users/edit/edit-geological-form.template.html
@@ -5,7 +5,7 @@
 		<div class="container map-detail" style="margin-top: 50px;">
 			<table>
 				<tr>
-					<td><label>Mã đề tài (*)</label></td>
+					<td><label>Mã đề tài <span class="has-required">(*)</span>: </label></td>
 					<td>
 						<input type="text" name="maDeTai" ng-model="data.maDeTai" class="input-form" required>
 					</td>
@@ -16,11 +16,11 @@
 			<table>
 				<h3 class="h3-title">SỐ HIỆU</h3>
 				<tr>
-					<td><label>01. Số hiệu thực địa (*):</label></td>
+					<td><label>01. Số hiệu thực địa <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text"  title="{{tooltips[1]}}" name="soHieuThucDia" ng-model="data.soHieuThucDia" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>02. Số hiệu bảo tàng cơ sở (*):</label></td>
+					<td><label>02. Số hiệu bảo tàng cơ sở <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text"  title="{{tooltips[2]}}" name="soHieuBaoTangCS" ng-model="data.soHieuBaoTangCS" class="input-form" required></td>
 				</tr>
 				<tr>
@@ -46,7 +46,7 @@
 			<table>
 				<h3 class="h3-title">TÊN MẪU</h3>
 				<tr>
-					<td><label>07. Tên Việt Nam (phổ thông) (*):</label></td>
+					<td><label>07. Tên Việt Nam (phổ thông) <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[7]}}" name="tenVietNam" ng-model="data.tenVietNam" class="input-form" required></td>
 				</tr>
 				<tr>
@@ -87,21 +87,21 @@
 					<td><input type="number" min = "0" title="{{tooltips[15]}}" name="soLuongTieuBan" ng-model="data.soLuongTieuBan" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>16. Loại mẫu vật (*):</label></td>
+					<td><label>16. Loại mẫu vật <span class="has-required">(*)</span>:</label></td>
 					<td>
 						<select required class="select-box" title="{{tooltips[16]}}" name="loaiMau" ng-model="data.loaiMau">
-							<option>Mẫu nghiên cứu</option>
-							<option>Mẫu trưng bày</option>
-							<option>Mẫu type</option>
+							<option value="Mẫu nghiên cứu">Mẫu nghiên cứu</option>
+							<option value="Mẫu trưng bày">Mẫu trưng bày</option>
+							<option value="Mẫu type">Mẫu type</option>
 						</select>
 					</td>
 				</tr>
 				<tr>
-					<td><label>17. Kích thước mẫu (*):</label></td>
+					<td><label>17. Kích thước mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[17]}}" name="kichThuocMau" ng-model="data.kichThuocMau" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>18. Tình trạng mẫu (*):</label></td>
+					<td><label>18. Tình trạng mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[18]}}" name="tinhTrangMau" ng-model="data.tinhTrangMau" class="input-form" required></td>
 				</tr>
 				<tr>
@@ -115,11 +115,11 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU THU MẪU</h3>
 				<tr>
-					<td><label>20. Thời gian thu mẫu (*):</label></td>
+					<td><label>20. Thời gian thu mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="date" title="{{tooltips[20]}}" name="thoiGianThuMau" ng-model="data.thoiGianThuMau" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>21. Người thu mẫu (*):</label></td>
+					<td><label>21. Người thu mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[21]}}" name="nguoiThuMau" ng-model="data.nguoiThuMau" class="input-form" required></td>
 				</tr>
 				<tr>
@@ -127,7 +127,7 @@
 					<td><input type="text" id="coQuanThuMau" title="{{tooltips[22]}}" name="coQuanThuMau" ng-model="data.coQuanThuMau" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>23. Phương pháp thu mẫu (*):</label></td>
+					<td><label>23. Phương pháp thu mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[23]}}" name="phuongPhapThuMau" ng-model="data.phuongPhapThuMau" class="input-form" required></td>
 				</tr>
 				<tr>
@@ -135,15 +135,15 @@
 					<td ng-controller="PlaceController">
 					<table>
 						<tr>
-							<td>Quốc gia(*): </td>
+							<td>Quốc gia<span class="has-required">(*)</span>: </td>
 							<td>
-								<select class="select-box" ng-model="data.quocGia" title="{{tooltips[24]}}" name="quocGia" required>
-									<option value="VietNam">Việt Nam</option>
+								<select class="select-box" ng-model="quocGia" title="{{tooltips[24]}}" name="quocGia" required>
+									<option value="Việt Nam">Việt Nam</option>
 								</select>
 							</td>
 						</tr>
 						<tr>
-							<td>Tỉnh/Thành phố(*): </td>
+							<td>Tỉnh/Thành phố<span class="has-required">(*)</span>: </td>
 							<td>
 								<select class="select-box" title="{{tooltips[25]}}" name="tinh" required ng-model= "$parent.data.tinh" ng-change="cityChange()">
 									<option ng-repeat="(key, city) in cities" value="{{key}}">{{city.type +" " + city.name}}</option>
@@ -151,7 +151,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>Huyện(*):</td>
+							<td>Huyện<span class="has-required">(*)</span>:</td>
 							<td>
 								<select class="select-box" title="{{tooltips[26]}}" name="huyen" required ng-model= "$parent.data.huyen" ng-change="districtChange()">
 									<option ng-repeat="(key, district) in districts | customCity: data.tinh" value="{{key}}">{{district.type + " " + district.name}}</option>
@@ -159,7 +159,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>Xã(*): </td>
+							<td>Xã<span class="has-required">(*)</span>: </td>
 							<td>
 								<select class="select-box" ng-model="data.xa" title="{{tooltips[27]}}" name="xa" required>
 									<option ng-repeat="(key, ward) in wards | customDistrict: data.huyen" value="{{key}}">{{ward.type+ " " + ward.name}}</option>
@@ -175,19 +175,19 @@
 				</tr>
 				<tr><td><label>25. Vị trị tọa độ theo hệ tọa độ Việt Nam 2000</label></td></tr>
 				<tr>
-					<td>Vĩ độ N (*): </td>
+					<td>Vĩ độ N <span class="has-required">(*)</span>: </td>
 					<td><input type="text" title="{{tooltips[29]}}" name="viDo" ng-model="data.viDo" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td>Kinh độ E (*):</td>
+					<td>Kinh độ E <span class="has-required">(*)</span>:</td>
 					<td><input type="text" title="{{tooltips[30]}}" name="kinhDo" ng-model="data.kinhDo" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>26. Thông tin về dự án, đề tài đợt thu nhập mẫu (*):</label></td>
+					<td><label>26. Thông tin về dự án, đề tài đợt thu nhập mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[31]}}" name="thongTinDuAn" ng-model="data.thongTinDuAn" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>27. Ghi chép thực địa (*):</label></td>
+					<td><label>27. Ghi chép thực địa <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[32]}}" name="ghiChepThucDia" ng-model="data.ghiChepThucDia" class="input-form" required></td>
 				</tr>
 				<tr>
@@ -209,19 +209,19 @@
 					<td><input type="date" title="{{tooltips[35]}}" name="thoiGianPhanTich" ng-model="data.thoiGianPhanTich" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>31. Người phân tích/giám định/định loại mẫu (*):</label></td>
+					<td><label>31. Người phân tích/giám định/định loại mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[36]}}" name="nguoiPhanTich" ng-model="data.nguoiPhanTich" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>32. Cơ quan/tổ chức phân tích/giám định/phân loại mẫu (*):</label></td>
+					<td><label>32. Cơ quan/tổ chức phân tích/giám định/phân loại mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[37]}}" name="coQuanToChucPhanTich" ng-model="data.coQuanToChucPhanTich" id="coQuanToChucPhanTich" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>33. Tài liệu phân tích/giám định/phân loại đi kèm (*):</label></td>
-					<td><input type="file" multiple title="{{tooltips[38]}}" name="taiLieuPhanTich" ng-model="data.taiLieuPhanTich" accept=".doc, .docx, .pdf" class="input-form" required></td>
+					<td><label>33. Tài liệu phân tích/giám định/phân loại đi kèm <span class="has-required">(*)</span>:</label></td>
+					<td><input type="file" multiple title="{{tooltips[38]}}" name="taiLieuPhanTich" ng-model="data.taiLieuPhanTich" accept=".doc, .docx, .pdf" class="input-form" valid-file required></td>
 				</tr>
 				<tr>
-					<td><label>34. Các phân tích quang học</label></td>
+					<td><label>34. Các phân tích quang học: </label></td>
 					<td><input type="text" title="{{tooltips[39]}}" name="phanTichQuangHocStr" ng-model="data.phanTichQuangHocStr" class="input-form">
 					<input type="file" multiple accept="video/mp4,video/x-m4v,video/*" name ="phanTichQuangHocFile" ng-model="data.phanTichQuangHocFile" class="input-form"></td>
 				</tr>
@@ -257,8 +257,8 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU HÌNH ẢNH, PHIM, TÀI LIỆU MẪU VẬT</h3>
 				<tr>
-					<td><label>40. Ảnh mẫu vật (*):</label></td>
-					<td><input type="file" multiple title="{{tooltips[46]}}" name="anhMauVat" ng-model="data.anhMauVat" class="input-form" accept="image/x-png, image/gif, image/jpeg, .pdf" required></td>
+					<td><label>40. Ảnh mẫu vật <span class="has-required">(*)</span>:</label></td>
+					<td><input type="file" multiple title="{{tooltips[46]}}" name="anhMauVat" ng-model="data.anhMauVat" class="input-form" accept="image/x-png, image/gif, image/jpeg, .pdf" valid-file required></td>
 				</tr>
 				<tr>
 					<td><label>41. Hình ảnh mẫu ngoài thực địa:</label></td>
@@ -312,21 +312,21 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU ĐẶC ĐIỂM MẪU VẬT</h3>
 				<tr>
-					<td><label>46. Loại mẫu (*):</label></td>
+					<td><label>46. Loại mẫu <span class="has-required">(*)</span>:</label></td>
 					<td>
 						<select required class="select-box" title="{{tooltips[56]}}" name="loaiMauVat" ng-model="data.loaiMauVat">
-							<option>Mẫu đá </option>
-							<option>Mẫu khoáng vật</option>
-							<option>Mẫu khoáng sản</option>
+							<option value="Mẫu đá">Mẫu đá </option>
+							<option value="Mẫu khoáng vật">Mẫu khoáng vật</option>
+							<option value="Mẫu khoáng sản">Mẫu khoáng sản</option>
 						</select>
 					</td>
 				</tr>
 				<tr>
-					<td><label>47. Hình dáng mẫu, dạng tồn tại (*):</label></td>
+					<td><label>47. Hình dáng mẫu, dạng tồn tại <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[57]}}" name="hinhDangMauTonTai" ng-model="data.hinhDangMauTonTai" required id="hinhDangMauTonTai" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>48. Màu sắc (*):</label></td>
+					<td><label>48. Màu sắc <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[58]}}" name="mauSac" ng-model="data.mauSac" required id="mauSac" class="input-form"></td>
 				</tr>
 				<tr>
@@ -334,11 +334,11 @@
 					<td><input type="text" title="{{tooltips[59]}}" name="phanLoaiSuDung" ng-model="data.phanLoaiSuDung" id="phanLoaiSuDung" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>50. Thành phần khoáng vật (*):</label></td>
+					<td><label>50. Thành phần khoáng vật <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[60]}}" name="thanhPhanKhoangVat" ng-model="data.thanhPhanKhoangVat" required class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>51. Tính chất vật lý (*):</label></td>
+					<td><label>51. Tính chất vật lý <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[61]}}" name="tinhChatVatLy" ng-model="data.tinhChatVatLy" required id="tinhChatVatLy" class="input-form"></td>
 				</tr>
 				<tr>
@@ -355,7 +355,7 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU PHÂN BỐ VÀ GIÁ TRỊ SỬ DỤNG</h3>
 				<tr>
-					<td><label>54. Phân bố Việt Nam (*):</label></td>
+					<td><label>54. Phân bố Việt Nam <span class="has-required">(*)</span>:</label></td>
 					<td>
 					<table>
 						<tr>
@@ -466,7 +466,7 @@
 					<td><input type="file" title="{{tooltips[78]}}" name="hoSoNhapMauVatDiKem" ng-model="data.hoSoNhapMauVatDiKem" class="input-form" accept=".doc, docx, .pdf" ></td>
 				</tr>
 				<tr>
-					<td><label>69. Người nhập phiếu mẫu vật (*):</label></td>
+					<td><label>69. Người nhập phiếu mẫu vật <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[79]}}" name="nguoiNhapPhieuMauVat" ng-model="data.nguoiNhapPhieuMauVat" class="input-form" required></td>
 				</tr>
 				<tr>
