--- a/app/views/users/edit/edit-land-form.template.html
+++ b/app/views/users/edit/edit-land-form.template.html
@@ -5,7 +5,7 @@
 		<div class="container map-detail" style="margin-top: 50px;">
 			<table>
 				<tr>
-					<td><label>Mã đề tài (*)</label></td>
+					<td><label>Mã đề tài <span class="has-required">(*)</span>: </label></td>
 					<td>
 						<input type="text" name="maDeTai" ng-model="data.maDeTai" class="input-form" required>
 					</td>
@@ -16,11 +16,11 @@
 			<table>
 				<h3 class="h3-title">SỐ HIỆU</h3>
 				<tr>
-					<td><label>01. Số hiệu thực địa (*):</label></td>
+					<td><label>01. Số hiệu thực địa <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[1]}}" name="soHieuThucDia" ng-model="data.soHieuThucDia" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>02. Số hiệu bảo tàng cơ sở (*):</label></td>
+					<td><label>02. Số hiệu bảo tàng cơ sở <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[2]}}" name="soHieuBaoTangCS" ng-model="data.soHieuBaoTangCS" class="input-form" required></td>
 				</tr>
 				<tr>
@@ -46,7 +46,7 @@
 			<table>
 				<h3 class="h3-title">TÊN MẪU</h3>
 				<tr>
-					<td><label>07. Tên Việt Nam(phổ thông) (*):</label></td>
+					<td><label>07. Tên Việt Nam(phổ thông) <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text"  title="{{tooltips[7]}}" name="tenVietNam" ng-model="data.tenVietNam" class="input-form" required></td>
 				</tr>
 				<tr>
@@ -87,21 +87,21 @@
 					<td><input type="number" min = "0" title="{{tooltips[15]}}" name="soLuongTieuBan" ng-model="data.soLuongTieuBan" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>16. Loại mẫu vật (*):</label></td>
+					<td><label>16. Loại mẫu vật <span class="has-required">(*)</span>:</label></td>
 					<td>
 						<select required title="{{tooltips[16]}}" name="loaiMau" class="select-box" ng-model="data.loaiMau">
-							<option>Mẫu nghiên cứu</option>
-							<option>Mẫu trưng bày</option>
-							<option>Mẫu type</option>
+							<option value="Mẫu nghiên cứu">Mẫu nghiên cứu</option>
+							<option value="Mẫu trưng bày">Mẫu trưng bày</option>
+							<option value="Mẫu type">Mẫu type</option>
 						</select>
 					</td>
 				</tr>
 				<tr>
-					<td><label>17. Kích thước mẫu (*):</label></td>
+					<td><label>17. Kích thước mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[17]}}" name="kichThuocMau" ng-model="data.kichThuocMau" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>18. Tình trạng mẫu (*):</label></td>
+					<td><label>18. Tình trạng mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text"  title="{{tooltips[18]}}" name="tinhTrangMau" ng-model="data.tinhTrangMau" class="input-form" required></td>
 				</tr>
 				<tr>
@@ -114,11 +114,11 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU THU MẪU</h3>
 				<tr>
-					<td><label>20. Thời gian thu mẫu (*):</label></td>
+					<td><label>20. Thời gian thu mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="date" title="{{tooltips[20]}}" name="thoiGianThuMau" ng-model="data.thoiGianThuMau" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>21. Người thu mẫu (*):</label></td>
+					<td><label>21. Người thu mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[21]}}" name="nguoiThuMau" ng-model="data.nguoiThuMau"  class="input-form" required></td>
 				</tr>
 				<tr>
@@ -126,7 +126,7 @@
 					<td><input type="text" id="coQuanThuMau" title="{{tooltips[22]}}" name="coQuanThuMau" ng-model="data.coQuanThuMau" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>23. Phương pháp thu mẫu (*):</label></td>
+					<td><label>23. Phương pháp thu mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" ng-model="data.phuongPhapThuMau" title="{{tooltips[23]}}" name="phuongPhapThuMau" class="input-form" required></td>
 				</tr>
 				<tr>
@@ -134,59 +134,59 @@
 					<td ng-controller="PlaceController">
 					<table>
 						<tr>
-							<td>Quốc gia(*): </td>
+							<td>Quốc gia<span class="has-required">(*)</span>: </td>
 							<td>
-								<select class="select-box" ng-model="data.quocGia" title="{{tooltips[24]}}" name="quocGia" required>
-									<option value="VietNam">Việt Nam</option>
+								<select class="select-box" ng-model="quocGia" title="{{tooltips[24]}}" name="quocGia" required>
+									<option value="Việt Nam">Việt Nam</option>
 								</select>
 							</td>
 						</tr>
 						<tr>
-							<td>Tỉnh/Thành phố(*): </td>
+							<td>Tỉnh/Thành phố<span class="has-required">(*)</span>: </td>
 							<td>
-								<select class="select-box" title="{{tooltips[25]}}" name="tinh" required ng-model= "$parent.data.tinh" ng-change="cityChange()">
+								<select class="select-box" title="{{tooltips[25]}}" name="tinh" required ng-model= "$parent.tinh" ng-change="cityChange()">
 									<option ng-repeat="(key, city) in cities" value="{{key}}">{{city.type +" " + city.name}}</option>
 								</select>
 							</td>
 						</tr>
 						<tr>
-							<td>Huyện(*):</td>
+							<td>Huyện<span class="has-required">(*)</span>:</td>
 							<td>
-								<select class="select-box" title="{{tooltips[26]}}" name="huyen" required ng-model= "$parent.data.huyen" ng-change="districtChange()">
-									<option ng-repeat="(key, district) in districts | customCity: data.tinh" value="{{key}}">{{district.type + " " + district.name}}</option>
+								<select class="select-box" title="{{tooltips[26]}}" name="huyen" required ng-model= "$parent.huyen" ng-change="districtChange()">
+									<option ng-repeat="(key, district) in districts | customCity: tinh" value="{{key}}">{{district.type + " " + district.name}}</option>
 								</select>
 							</td>
 						</tr>
 						<tr>
-							<td>Xã(*): </td>
+							<td>Xã<span class="has-required">(*)</span>: </td>
 							<td>
-								<select class="select-box" ng-model="xa" title="{{tooltips[27]}}" name="data.xa" required>
-									<option ng-repeat="(key, ward) in wards | customDistrict: data.huyen" value="{{key}}">{{ward.type+ " " + ward.name}}</option>
+								<select class="select-box" ng-model="xa" title="{{tooltips[27]}}" name="xa" required>
+									<option ng-repeat="(key, ward) in wards | customDistrict: huyen" value="{{key}}">{{ward.type+ " " + ward.name}}</option>
 								</select>
 							</td>
 						</tr>
 						<tr>
 							<td>Thôn/Xóm: </td>
-							<td><input type="text" ng-model="data.thon" title="{{tooltips[28]}}" name="thon" id="thon" class="input-form"></td>
+							<td><input type="text" ng-model="thon" title="{{tooltips[28]}}" name="thon" id="thon" class="input-form"></td>
 						</tr>
 					</table>
 					</td>
 				</tr>
 				<tr><td><label>25. Vị trị tọa độ theo hệ tọa độ Việt Nam 2000</label></td></tr>
 				<tr>
-					<td>Vĩ độ N (*): </td>
+					<td>Vĩ độ N <span class="has-required">(*)</span>: </td>
 					<td><input type="text" title="{{tooltips[29]}}" name="viDo" ng-model="data.viDo" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td>Kinh độ E (*):</td>
+					<td>Kinh độ E <span class="has-required">(*)</span>:</td>
 					<td><input type="text" title="{{tooltips[30]}}" name="kinhDo" ng-model="data.kinhDo" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>26. Mẫu chất ở vị trí thu mẫu (*):</label></td>
+					<td><label>26. Mẫu chất ở vị trí thu mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text"  title="{{tooltips[31]}}" name="mauChatOViTriThuMau" ng-model="data.mauChatOViTriThuMau" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>27. Độ cao (*): </label></td>
+					<td><label>27. Độ cao <span class="has-required">(*)</span>: </label></td>
 					<td><input type="number" min="0" title="{{tooltips[32]}}" name="doCao" ng-model="data.doCao" class="input-form" required ></td>
 				</tr>
 				<tr>
@@ -194,15 +194,15 @@
 					<td><input type="number" title="{{tooltips[33]}}" name="doSau" ng-model="data.doSau" min="0" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>29. Độ dốc nơi thu mẫu (*):</label></td>
+					<td><label>29. Độ dốc nơi thu mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="number" required min="0" title="{{tooltips[34]}}" name="doDocNoiThuMau" ng-model="data.doDocNoiThuMau" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>30. Mực nước ngầm nơi thu mẫu (*):</label></td>
+					<td><label>30. Mực nước ngầm nơi thu mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="number" title="{{tooltips[35]}}" name="mucNuocNgamNoiThuMau" ng-model="data.mucNuocNgamNoiThuMau" id="mucNuocNgamNoiThuMau" required class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>31. Khả năng thoát nước nơi thu mẫu (*):</label></td>
+					<td><label>31. Khả năng thoát nước nơi thu mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text"  title="{{tooltips[36]}}" name="khaNangThoatNuoc" ng-model="data.khaNangThoatNuoc" id="khaNangThoatNuoc" required class="input-form"></td>
 				</tr>
 				<tr>
@@ -210,19 +210,19 @@
 					<td><input type="text"  title="{{tooltips[37]}}" name="thoiTietKhiThuMau" ng-model="data.thoiTietKhiThuMau" id="thoiTietKhiThuMau" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>33. Dạng địa hình nơi thu mẫu (*):</label></td>
+					<td><label>33. Dạng địa hình nơi thu mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[38]}}" name="dangDiaHinhNoiThuMau" ng-model="data.dangDiaHinhNoiThuMau" id="dangDiaHinhNoiThuMau"  required class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>34. Thảm thực vật hiện tại nơi thu mẫu (*):</label></td>
+					<td><label>34. Thảm thực vật hiện tại nơi thu mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text"  title="{{tooltips[39]}}" name="thamThucVatNoiThuMau" ng-model="data.thamThucVatNoiThuMau" id="thamThucVatNoiThuMau" required class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>35. Thông tin về Dự án, đề tài/chuyến/đợt thu thập mẫu vật (*):</label></td>
+					<td><label>35. Thông tin về Dự án, đề tài/chuyến/đợt thu thập mẫu vật <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" ng-model="data.thongTinDuAn" title="{{tooltips[40]}}" name="thongTinDuAn" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>36. Ghi chép thực địa (*):</label></td>
+					<td><label>36. Ghi chép thực địa <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[41]}}" name="ghiChepThucDia" ng-model="data.ghiChepThucDia"  class="input-form" required></td>
 				</tr>
 				<tr>
@@ -251,7 +251,7 @@
 					<td><input type="file" title="{{tooltips[46]}}" name="hoSoPhanTichMauDat" ng-model="data.hoSoPhanTichMauDat" accept=".doc, .docx, .pdf" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>42. Kết quả phân tích (*):</label></td>
+					<td><label>42. Kết quả phân tích <span class="has-required">(*)</span>:</label></td>
 					<td><input type="file" title="{{tooltips[47]}}" name="ketQuaPhanTich" ng-model="data.ketQuaPhanTich" id="ketQuaPhanTich" accept=".doc, .docx, .pdf" class="input-form" valid-file required></td>
 				</tr>
 				<tr>
@@ -259,15 +259,15 @@
 					<td><input type="date" title="{{tooltips[48]}}" name="thoiGianGiamDinhMau" ng-model="data.thoiGianGiamDinhMau" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>44. Người giám định mẫu (*):</label></td>
+					<td><label>44. Người giám định mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[49]}}" name="nguoiGiamDinhMau" ng-model="data.nguoiGiamDinhMau" id="nguoiGiamDinhMau" class="input-form"  required></td>
 				</tr>
 				<tr>
-					<td><label>45. Cơ quan/tổ chức giám định mẫu (*):</label></td>
+					<td><label>45. Cơ quan/tổ chức giám định mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[50]}}" name="coQuanToChucGiamDinh" ng-model="data.coQuanToChucGiamDinh" id="coQuanToChucGiamDinh" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>46. Tài liệu phân tích/giám định/phân loại đi kèm (*):</label></td>
+					<td><label>46. Tài liệu phân tích/giám định/phân loại đi kèm <span class="has-required">(*)</span>:</label></td>
 					<td><input type="file" ng-model="data.taiLieuPhanTich" multiple title="{{tooltips[51]}}" name="taiLieuPhanTich" accept=".doc, .docx, .pdf" class="input-form" valid-file required></td>
 				</tr>
 				<tr>
@@ -280,7 +280,7 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU HÌNH ẢNH, PHIM, TÀI LIỆU MẪU VẬT</h3>
 				<tr>
-					<td><label>48. Ảnh mẫu vật (*):</label></td>
+					<td><label>48. Ảnh mẫu vật <span class="has-required">(*)</span>:</label></td>
 					<td><input type="file" multiple title="{{tooltips[53]}}" name="anhMauVat" ng-model="data.anhMauVat" class="input-form" accept="image/x-png, image/gif, image/jpeg" valid-file required></td>
 				</tr>
 				<tr>
@@ -321,7 +321,7 @@
 					<td><input type="text" title="{{tooltips[60]}}" name="coQuanXuLy" ng-model="data.coQuanXuLy" id="coQuanXuLy" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>53. Tài liệu đi kèm (*):</label></td>
+					<td><label>53. Tài liệu đi kèm <span class="has-required">(*)</span>:</label></td>
 					<td><input type="file" title="{{tooltips[61]}}" name="taiLieuDiKem" ng-model="data.taiLieuDiKem" class="input-form" accept=".doc,.docx, .pdf" valid-file required></td>
 				</tr>
 				<tr>
@@ -334,7 +334,7 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU PHÂN BỐ VÀ GIÁ TRỊ SỬ DỤNG</h3>
 				<tr>
-					<td><label>55. Phân bố Việt Nam (*):</label></td>
+					<td><label>55. Phân bố Việt Nam <span class="has-required">(*)</span>:</label></td>
 					<td>
 						<input type="text" title="{{tooltips[63]}}" name="phanBoVietNamStr" ng-model="data.phanBoVietNamStr"  class="input-form" required>
 						<input type="file" multiple name ="phanBoVietNamFile" ng-model="data.phanBoVietNamFile">
@@ -348,7 +348,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td><label>57. Giá trị sử dụng (*):</label></td>
+					<td><label>57. Giá trị sử dụng <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text"  title="{{tooltips[65]}}" name="giaTriSuDung" ng-model="data.giaTriSuDung" class="input-form" required></td>
 				</tr>
 				<tr>
@@ -437,7 +437,7 @@
 					<td><input type="file" title="{{tooltips[77]}}" name="hoSoNhapMauVatDiKem" ng-model="data.hoSoNhapMauVatDiKem" class="input-form" accept=".doc, docx, .pdf"></td>
 				</tr>
 				<tr>
-					<td><label>70. Người nhập phiếu mẫu vật (*):</label></td>
+					<td><label>70. Người nhập phiếu mẫu vật <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text"  title="{{tooltips[78]}}" name="nguoiNhapPhieuMauVat" ng-model="data.nguoiNhapPhieuMauVat" class="input-form" required></td>
 				</tr>
 				<tr>
