--- a/app/views/users/edit/edit-paleontological-form.template.html
+++ b/app/views/users/edit/edit-paleontological-form.template.html
@@ -5,9 +5,10 @@
 		<div class="container map-detail" style="margin-top: 50px;">
 			<table>
 				<tr>
-					<td><label>Mã đề tài (*)</label></td>
+					<td><label>Mã đề tài  <span class="has-required">(*)</span>: </label></td>
 					<td>
 						<input type="text" name="maDeTai" ng-model="data.maDeTai" class="input-form" required>
+						<!-- <ng-include src="/app/views/errors/err.blade.html" scope="" onload=""></ng-include> -->
 					</td>
 				</tr>
 			</table>
@@ -16,11 +17,11 @@
 			<table>
 				<h3 class="h3-title">SỐ HIỆU</h3>
 				<tr>
-					<td><label>01. Số hiệu thực địa (*):</label></td>
+					<td><label>01. Số hiệu thực địa <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text"  title="{{tooltips[1]}}" name="soHieuThucDia" ng-model="data.soHieuThucDia" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>02. Số hiệu bảo tàng cơ sở(*):</label></td>
+					<td><label>02. Số hiệu bảo tàng cơ sở <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text"  title="{{tooltips[2]}}" name="soHieuBaoTangCS" ng-model="data.soHieuBaoTangCS" class="input-form" required></td>
 				</tr>
 				<tr>
@@ -46,7 +47,7 @@
 			<table>
 				<h3 class="h3-title">TÊN MẪU VẬT</h3>
 				<tr>
-					<td><label>07. Tên Việt Nam (*):</label></td>
+					<td><label>07. Tên Việt Nam  <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[7]}}" name="tenVietNam" ng-model="data.tenVietNam" class="input-form" required></td>
 				</tr>
 				<tr>
@@ -76,15 +77,15 @@
 					<td><input type="text" title="{{tooltips[13]}}" name="nganh" ng-model="data.nganh" id="nganh" class="input-form"></td>
 				</tr>
 				<tr>
-					<td>Lớp (*): </td>
+					<td>Lớp  <span class="has-required">(*)</span>: </td>
 					<td><input type="text" title="{{tooltips[14]}}" name="lop" ng-model="data.lop" id="lop" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td>Bộ (*): </td>
+					<td>Bộ  <span class="has-required">(*)</span>: </td>
 					<td><input type="text" title="{{tooltips[15]}}" name="bo" ng-model="data.bo" id="bo" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td>Họ (*): </td>
+					<td>Họ  <span class="has-required">(*)</span>: </td>
 					<td><input type="text" title="{{tooltips[16]}}" name="ho" ng-model="data.ho" id="ho" class="input-form" required></td>
 				</tr>
 				<tr>
@@ -106,7 +107,7 @@
 				</tr>
 				<tr>
 					<td><label>13. Thông tin khác:</label></td>
-					<td><input type="text" title="{{tooltips[21]}}" name="thongTinKhac2" ng-model="data.thongTinKhac2" class="input-form"  required></td>
+					<td><input type="text" title="{{tooltips[21]}}" name="thongTinKhac2" ng-model="data.thongTinKhac2" class="input-form"></td>
 				</tr>
 			</table>
 		</div>
@@ -122,21 +123,21 @@
 					<td><input type="number" min = "0" title="{{tooltips[23]}}" name="soLuongTieuBan" ng-model="data.soLuongTieuBan" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>16. Loại mẫu vật (*):</label></td>
+					<td><label>16. Loại mẫu vật  <span class="has-required">(*)</span>:</label></td>
 					<td>
 						<select required title="{{tooltips[24]}}" name="loaiMau" class="select-box" ng-model="data.loaiMau">
-							<option>Mẫu nghiên cứu</option>
-							<option>Mẫu trưng bày</option>
-							<option>Mẫu type</option>
+							<option value="Mẫu nghiên cứu">Mẫu nghiên cứu</option>
+							<option value="Mẫu trưng bày">Mẫu trưng bày</option>
+							<option value="Mẫu type">Mẫu type</option>
 						</select>
 					</td>
 				</tr>
 				<tr>
-					<td><label>17. Kích thước mẫu (*):</label></td>
+					<td><label>17. Kích thước mẫu  <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[25]}}" name="kichThuocMau" ng-model="data.kichThuocMau" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>18. Tình trạng mẫu (*):</label></td>
+					<td><label>18. Tình trạng mẫu  <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[26]}}" name="tinhTrangMau" ng-model="data.tinhTrangMau" class="input-form" required></td>
 				</tr>
 
@@ -150,11 +151,11 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU THU MẪU</h3>
 				<tr>
-					<td><label>20. Thời gian thu mẫu (*):</label></td>
+					<td><label>20. Thời gian thu mẫu  <span class="has-required">(*)</span>:</label></td>
 					<td><input type="date" title="{{tooltips[28]}}" name="thoiGianThuMau" ng-model="data.thoiGianThuMau" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>21. Người thu mẫu (*):</label></td>
+					<td><label>21. Người thu mẫu  <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[29]}}" name="nguoiThuMau" ng-model="data.nguoiThuMau" class="input-form" required></td>
 				</tr>
 				<tr>
@@ -162,7 +163,7 @@
 					<td><input type="text" id="coQuanThuMau" ng-model="data.coQuanThuMau" title="{{tooltips[30]}}" name="coQuanThuMau" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>23. Phương pháp thu mẫu (*):</label></td>
+					<td><label>23. Phương pháp thu mẫu  <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[31]}}" name="phuongPhapThuMau" ng-model="data.phuongPhapThuMau" class="input-form" required></td>
 				</tr>
 				<tr>
@@ -170,15 +171,15 @@
 					<td ng-controller="PlaceController">
 						<table>
 							<tr>
-								<td>Quốc gia(*): </td>
+								<td>Quốc gia <span class="has-required">(*)</span>: </td>
 								<td>
-									<select class="select-box" ng-model="data.quocGia" title="{{tooltips[32]}}" name="quocGia" required>
-										<option value="VietNam">Việt Nam</option>
+									<select class="select-box" ng-model="quocGia" title="{{tooltips[32]}}" name="quocGia" required>
+										<option value="Việt Nam">Việt Nam</option>
 									</select>
 								</td>
 							</tr>
 							<tr>
-								<td>Tỉnh/Thành phố(*): </td>
+								<td>Tỉnh/Thành phố <span class="has-required">(*)</span>: </td>
 								<td>
 									<select class="select-box" title="{{tooltips[33]}}" name="tinh" required ng-model= "$parent.data.tinh" ng-change="cityChange()">
 										<option ng-repeat="(key, city) in cities" value="{{key}}">{{city.type +" " + city.name}}</option>
@@ -186,7 +187,7 @@
 								</td>
 							</tr>
 							<tr>
-								<td>Huyện(*):</td>
+								<td>Huyện <span class="has-required">(*)</span>:</td>
 								<td>
 									<select class="select-box" title="{{tooltips[34]}}" name="huyen" required ng-model= "$parent.data.huyen" ng-change="districtChange()">
 										<option ng-repeat="(key, district) in districts | customCity: data.tinh" value="{{key}}">{{district.type + " " + district.name}}</option>
@@ -194,7 +195,7 @@
 								</td>
 							</tr>
 							<tr>
-								<td>Xã(*): </td>
+								<td>Xã <span class="has-required">(*)</span>: </td>
 								<td>
 									<select class="select-box" ng-model="data.xa" title="{{tooltips[35]}}" name="xa" required>
 										<option ng-repeat="(key, ward) in wards | customDistrict: data.huyen" value="{{key}}">{{ward.type+ " " + ward.name}}</option>
@@ -210,29 +211,29 @@
 				</tr>
 				<tr><td><label>25. Vị trị tọa độ theo hệ tọa độ Việt Nam 2000</label></td></tr>
 				<tr>
-					<td>Vĩ độ N (*): </td>
+					<td>Vĩ độ N  <span class="has-required">(*)</span>: </td>
 					<td><input type="text" title="{{tooltips[37]}}" name="viDo" ng-model="data.viDo" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td>Kinh độ E (*):</td>
+					<td>Kinh độ E  <span class="has-required">(*)</span>:</td>
 					<td><input type="text" title="{{tooltips[38]}}" name="kinhDo" ng-model="data.kinhDo" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>26. Thông tin địa tầng và tuổi địa chất(*):</label></td>
+					<td><label>26. Thông tin địa tầng và tuổi địa chất <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[39]}}" name="thongTinDiaTang" ng-model="data.thongTinDiaTang" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>27. Thông tin về dự án, đề tài đợt thu nhập mẫu (*):</label></td>
+					<td><label>27. Thông tin về dự án, đề tài đợt thu nhập mẫu  <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[40]}}" name="thongTinDuAn" ng-model="data.thongTinDuAn" class="input-form" required></td>
 				</tr>
 				
 				<tr>
-					<td><label>28. Ghi chép thực địa (*):</label></td>
+					<td><label>28. Ghi chép thực địa  <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[41]}}" name="ghiChepThucDia" ng-model="data.ghiChepThucDia" class="input-form" required></td>
 				</tr>
 				<tr>
 					<td><label>29. Bản đồ:</label></td>
-					<td><input type="file" title="{{tooltips[42]}}" name="banDo" ng-model="data.banDo" class="input-form" required></td>
+					<td><input type="file" title="{{tooltips[42]}}" name="banDo" ng-model="data.banDo" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>30. Thông tin khác:</label></td>
@@ -248,15 +249,15 @@
 					<td><input type="date" title="{{tooltips[44]}}" name="thoiGianPhanTich" ng-model="data.thoiGianPhanTich" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>32. Người phân tích/giám định/định loại mẫu (*):</label></td>
+					<td><label>32. Người phân tích/giám định/định loại mẫu  <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[45]}}" name="nguoiPhanTich" ng-model="data.nguoiPhanTich" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>33. Cơ quan/tổ chức phân tích/giám định/phân loại mẫu (*):</label></td>
+					<td><label>33. Cơ quan/tổ chức phân tích/giám định/phân loại mẫu  <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[46]}}" name="coQuanToChucPhanTich" ng-model="data.coQuanToChucPhanTich" id="coQuanToChucPhanTich" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>34. Tài liệu phân tích/giám định/phân loại đi kèm (*):</label></td>
+					<td><label>34. Tài liệu phân tích/giám định/phân loại đi kèm  <span class="has-required">(*)</span>:</label></td>
 					<td><input type="file" multiple title="{{tooltips[47]}}" name="taiLieuPhanTich" ng-model="data.taiLieuPhanTich" accept=".doc, .docx, .pdf" class="input-form" valid-file required></td>
 				</tr>
 				<tr>
@@ -272,7 +273,7 @@
 					<td><input type="file" multiple accept=".doc, .docx, .pdf" title="{{tooltips[50]}}" name="dacDiemLatMong" ng-model="data.dacDiemLatMong" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>38. Mô tả/đặc điểm hình thái (*)</label></td>
+					<td><label>38. Mô tả/đặc điểm hình thái  <span class="has-required">(*)</span></label></td>
 					<td><input type="text" title="{{tooltips[51]}}" name="moTaHinhThaiStr" ng-model="data.moTaHinhThaiStr" class="input-form" required></td>
 				</tr>
 				<tr>
@@ -289,8 +290,8 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU HÌNH ẢNH, PHIM, TÀI LIỆU MẪU VẬT</h3>
 				<tr>
-					<td><label>41. Ảnh mẫu vật (*):</label></td>
-					<td><input type="file" multiple title="{{tooltips[54]}}" name="anhMauVat" ng-model="data.anhMauVat" class="input-form" accept="image/x-png, image/gif, image/jpeg" required></td>
+					<td><label>41. Ảnh mẫu vật  <span class="has-required">(*)</span>:</label></td>
+					<td><input type="file" multiple title="{{tooltips[54]}}" name="anhMauVat" ng-model="data.anhMauVat" class="input-form" accept="image/x-png, image/gif, image/jpeg" valid-file required></td>
 				</tr>
 				<tr>
 					<td><label>42. Hình ảnh mẫu ngoài thực địa:</label></td>
@@ -373,7 +374,7 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU PHÂN BỐ VÀ GIÁ TRỊ SỬ DỤNG</h3>
 				<tr>
-					<td><label>48. Phân bố Việt Nam (*):</label></td>
+					<td><label>48. Phân bố Việt Nam  <span class="has-required">(*)</span>:</label></td>
 					<td>
 						<input type="text" title="{{tooltips[70]}}" name="phanBoVietNamStr" ng-model="data.phanBoVietNamStr" class="input-form">
 						<input type="file" multiple name ="phanBoVietNamFile" ng-model="data.phanBoVietNamFile">
@@ -477,7 +478,7 @@
 					<td><input type="file" title="{{tooltips[84]}}" name="hoSoNhapMauVatDiKem" ng-model="data.hoSoNhapMauVatDiKem" class="input-form" accept=".doc, docx, .pdf" ></td>
 				</tr>
 				<tr>
-					<td><label>63. Người nhập phiếu mẫu vật (*):</label></td>
+					<td><label>63. Người nhập phiếu mẫu vật  <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[85]}}" name="nguoiNhapPhieuMauVat" ng-model="data.nguoiNhapPhieuMauVat" class="input-form" required></td>
 				</tr>
 				<tr>
