--- a/app/views/users/edit/edit-vegetable-form.template.html
+++ b/app/views/users/edit/edit-vegetable-form.template.html
@@ -190,7 +190,7 @@
 						<tr>
 							<td>Quốc gia<span class="has-required">(*)</span>: </td>
 							<td>
-								<select class="select-box" ng-model="quocGia" title="{{tooltips[37]}}" name="quocGia" required>
+								<select class="select-box" ng-model="data.quocGia" title="{{tooltips[37]}}" name="quocGia" required>
 									<option value="Việt Nam">Việt Nam</option>
 								</select>
 							</td>
