--- a/app/views/users/add-land-form.template.html
+++ b/app/views/users/add-land-form.template.html
@@ -144,7 +144,7 @@
 						<tr>
 							<td>Tỉnh/Thành phố<span class="has-required">(*)</span>: </td>
 							<td>
-								<select class="select-box" title="{{tooltips[25]}}" name="tinh" required ng-model= "$parent.tinh" ng-change="cityChange()">
+								<select class="select-box" title="{{tooltips[25]}}" name="tinh" required ng-model= "tinh" ng-change="cityChange()">
 									<option ng-repeat="(key, city) in cities" value="{{key}}">{{city.type +" " + city.name}}</option>
 								</select>
 							</td>
@@ -152,7 +152,7 @@
 						<tr>
 							<td>Huyện<span class="has-required">(*)</span>:</td>
 							<td>
-								<select class="select-box" title="{{tooltips[26]}}" name="huyen" required ng-model= "$parent.huyen" ng-change="districtChange()">
+								<select class="select-box" title="{{tooltips[26]}}" name="huyen" required ng-model= "huyen" ng-change="districtChange()">
 									<option ng-repeat="(key, district) in districts | customCity: tinh" value="{{key}}">{{district.type + " " + district.name}}</option>
 								</select>
 							</td>
