--- a/app/views/users/add-paleontological-form.template.html
+++ b/app/views/users/add-paleontological-form.template.html
@@ -181,7 +181,7 @@
 							<tr>
 								<td>Tỉnh/Thành phố <span class="has-required">(*)</span>: </td>
 								<td>
-									<select class="select-box" title="{{tooltips[33]}}" name="tinh" required ng-model= "$parent.data.tinh" ng-change="cityChange()">
+									<select class="select-box" title="{{tooltips[33]}}" name="tinh" required ng-model= "tinh" ng-change="cityChange()">
 										<option ng-repeat="(key, city) in cities" value="{{key}}">{{city.type +" " + city.name}}</option>
 									</select>
 								</td>
@@ -189,22 +189,22 @@
 							<tr>
 								<td>Huyện <span class="has-required">(*)</span>:</td>
 								<td>
-									<select class="select-box" title="{{tooltips[34]}}" name="huyen" required ng-model= "$parent.data.huyen" ng-change="districtChange()">
-										<option ng-repeat="(key, district) in districts | customCity: data.tinh" value="{{key}}">{{district.type + " " + district.name}}</option>
+									<select class="select-box" title="{{tooltips[34]}}" name="huyen" required ng-model= "huyen" ng-change="districtChange()">
+										<option ng-repeat="(key, district) in districts | customCity: tinh" value="{{key}}">{{district.type + " " + district.name}}</option>
 									</select>
 								</td>
 							</tr>
 							<tr>
 								<td>Xã <span class="has-required">(*)</span>: </td>
 								<td>
-									<select class="select-box" ng-model="data.xa" title="{{tooltips[35]}}" name="xa" required>
-										<option ng-repeat="(key, ward) in wards | customDistrict: data.huyen" value="{{key}}">{{ward.type+ " " + ward.name}}</option>
+									<select class="select-box" ng-model="xa" title="{{tooltips[35]}}" name="xa" required>
+										<option ng-repeat="(key, ward) in wards | customDistrict: huyen" value="{{key}}">{{ward.type+ " " + ward.name}}</option>
 									</select>
 								</td>
 							</tr>
 							<tr>
 								<td>Thôn/Xóm: </td>
-								<td><input type="text" ng-model="data.thon" title="{{tooltips[36]}}" name="thon" id="thon" class="input-form"></td>
+								<td><input type="text" ng-model="thon" title="{{tooltips[36]}}" name="thon" id="thon" class="input-form"></td>
 							</tr>
 						</table>
 					</td>
