fix error string

--- a/app/views/users/edit/edit-animal-form.template.html
+++ b/app/views/users/edit/edit-animal-form.template.html
@@ -143,7 +143,7 @@
 			<tr>
 				<td><label>16. Loại mẫu <span class="has-required"> (*)</span>:</label></td>
 				<td>
-					<select class="select-box" ng-model="data.loaiMau" required title="{{tooltips[29]}}" name="loaiMau">
+					<select class="select-box" ng-init="" ng-model="data.loaiMau" required title="{{tooltips[29]}}" name="loaiMau">
 						<option value="Mẫu nghiên cứu">Mẫu nghiên cứu</option>
 						<option value="Mẫu trưng bày">Mẫu trưng bày</option>
 						<option value="Mẫu type">Mẫu type</option>
@@ -450,7 +450,7 @@
 			<tr>
 				<td><label>58. Hình thức nhập mẫu:</label></td>
 				<td>
-					<select class="select-box" ng-model="data.hinhThucNhapMau" title="{{tooltips[83]}}" name="hinhThucNhapMau">
+					<select class="select-box" ng-init="" ng-model="data.hinhThucNhapMau" title="{{tooltips[83]}}" name="hinhThucNhapMau">
 						<option value="Thu thập">Thu thập</option>
 						<option value="Hiến tặng">Hiến Tặng</option>
 					</select>
@@ -459,7 +459,7 @@
 			<tr>
 				<td><label>59. Trao đổi mẫu: </label></td>
 				<td>
-					<select class="select-box" ng-model="data.traoDoiMau" title="{{tooltips[84]}}" name="traoDoiMau">
+					<select class="select-box" ng-init="" ng-model="data.traoDoiMau" title="{{tooltips[84]}}" name="traoDoiMau">
 						<option value="Có thể">Có thể</option>
 						<option value="Không thể">Không thể</option>
 					</select>
@@ -468,7 +468,7 @@
 			<tr>
 				<td><label>60. Vay mượn:</label></td>
 				<td>
-					<select class="select-box" ng-model="data.vayMuon" title="{{tooltips[85]}}" name="vayMuon">
+					<select class="select-box" ng-model="data.vayMuon" ng-init="" title="{{tooltips[85]}}" name="vayMuon">
 						<option value=""></option>
 						<option value="Có thể">Có thể</option>
 						<option value="Không thể">Không thể</option>
