--- a/app/views/users/edit/edit-land-form.template.html
+++ b/app/views/users/edit/edit-land-form.template.html
@@ -89,7 +89,7 @@
 				<tr>
 					<td><label>16. Loại mẫu vật <span class="has-required">(*)</span>:</label></td>
 					<td>
-						<select required title="{{tooltips[16]}}" name="loaiMau" class="select-box" ng-model="data.loaiMau">
+						<select required title="{{tooltips[16]}}" name="loaiMau" class="select-box" ng-init="" ng-model="data.loaiMau">
 							<option value="Mẫu nghiên cứu">Mẫu nghiên cứu</option>
 							<option value="Mẫu trưng bày">Mẫu trưng bày</option>
 							<option value="Mẫu type">Mẫu type</option>
@@ -379,7 +379,7 @@
 				<tr>
 					<td><label>63. Hình thức nhập mẫu:</label></td>
 					<td>
-						<select class="select-box" title="{{tooltips[71]}}" name="hinhThucNhapMau" ng-model="data.hinhThucNhapMau">
+						<select class="select-box" ng-init="" title="{{tooltips[71]}}" name="hinhThucNhapMau" ng-model="data.hinhThucNhapMau">
 							<option value="Thu thập">Thu thập</option>
 							<option value="Hiến tặng">Hiến Tặng</option>
 							<option value="Khác">Khác</option>
@@ -390,7 +390,7 @@
 				<tr>
 					<td><label>64. Trao đổi mẫu: </label></td>
 					<td>
-						<select class="select-box" title="{{tooltips[72]}}" name="traoDoiMau" ng-model="data.traoDoiMau">
+						<select class="select-box" ng-init="" title="{{tooltips[72]}}" name="traoDoiMau" ng-model="data.traoDoiMau">
 							<option value="Có thể">Có thể</option>
 							<option value="Không thể">Không thể</option>
 						</select>
@@ -399,7 +399,7 @@
 				<tr>
 					<td><label>65. Vay mượn mẫu:</label></td>
 					<td>
-						<select class="select-box" title="{{tooltips[73]}}" name="vayMuon" ng-model="data.vayMuon">
+						<select class="select-box" ng-init="" title="{{tooltips[73]}}" name="vayMuon" ng-model="data.vayMuon">
 							<option value="Có thể">Có thể</option>
 							<option value="Không thể">Không thể</option>
 						</select>
