--- a/app/views/users/edit/edit-paleontological-form.template.html
+++ b/app/views/users/edit/edit-paleontological-form.template.html
@@ -125,7 +125,7 @@
 				<tr>
 					<td><label>16. Loại mẫu vật  <span class="has-required">(*)</span>:</label></td>
 					<td>
-						<select required title="{{tooltips[24]}}" name="loaiMau" class="select-box" ng-model="data.loaiMau">
+						<select required title="{{tooltips[24]}}" name="loaiMau" class="select-box" ng-init="" ng-model="data.loaiMau">
 							<option value="Mẫu nghiên cứu">Mẫu nghiên cứu</option>
 							<option value="Mẫu trưng bày">Mẫu trưng bày</option>
 							<option value="Mẫu type">Mẫu type</option>
@@ -419,7 +419,7 @@
 				<tr>
 					<td><label>56. Hình thức nhập mẫu:</label></td>
 					<td>
-						<select class="select-box" title="{{tooltips[78]}}" name="hinhThucNhapMau" ng-model="data.hinhThucNhapMau">
+						<select class="select-box" ng-init="" title="{{tooltips[78]}}" name="hinhThucNhapMau" ng-model="data.hinhThucNhapMau">
 							<option value="Thu thập">Thu thập</option>
 							<option value="Hiến tặng">Hiến Tặng</option>
 							<option value="Khác">Khác</option>
@@ -430,7 +430,7 @@
 				<tr>
 					<td><label>57. Trao đổi mẫu: </label></td>
 					<td>
-						<select class="select-box" title="{{tooltips[79]}}" name="traoDoiMau" ng-model="data.traoDoiMau">
+						<select class="select-box" ng-init="" title="{{tooltips[79]}}" name="traoDoiMau" ng-model="data.traoDoiMau">
 							<option value="Có thể">Có thể</option>
 							<option value="Không thể">Không thể</option>
 						</select>
@@ -439,7 +439,7 @@
 				<tr>
 					<td><label>58. Vay mượn mẫu:</label></td>
 					<td>
-						<select class="select-box" title="{{tooltips[80]}}" name="vayMuon" ng-model="data.vayMuon">
+						<select class="select-box" ng-init="" title="{{tooltips[80]}}" name="vayMuon" ng-model="data.vayMuon">
 							<option value="Có thể">Có thể</option>
 							<option value="Không thể">Không thể</option>
 						</select>
